reflectapi-demo/tests/errors/skip_field_without_default.stderr
error: field is excluded from the input schema (via `skip` or `input_skip`) but has no default value; add `#[serde(default)]` so deserialization succeeds when clients omit it
 --> tests/errors/skip_field_without_default.rs:3:5
  |
3 |     #[reflectapi(skip)]
  |     ^
